inclunindo exercicios em 1.1

--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "'0b10110'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "22"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "0.9999999999999999"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "13"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -472,14 +472,14 @@
     }
    },
    "source": [
-    "### Exemplo\n",
+    "**Exemplo:**\n",
     "\n",
     "Em Python também dispomos de algumas funções para acessar as informações do sistema de ponto flutuante:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemplo\n",
+    "**Exemplo:**\n",
     "\n",
     "Considere o sistema de ponto flutuante normalizado **SPF (3, 2,−1, 2)**, de base 3, 2 dígitos na mantissa, menor expoente igual a −1 e maior expoente 2.\n",
     "\n",
@@ -549,14 +549,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemplo\n",
+    "**Exemplo:**\n",
     "\n",
     "Tente explicar os resultados das operações a seguir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -585,13 +585,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemplo \n",
+    "**Exemplo:**\n",
     "Tente explicar os resultados a seguir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "0.6000000000000001"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "Decimal('0.1000000000000000055511151231257827021181583404541015625')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exemplo \n",
+    "**Exemplo:** \n",
     "Considere o seguinte processo iterativo\n",
     "\n",
     "$$x^{(0)} = \\frac{1}{3}$$\n",
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -737,6 +737,38 @@
     "for i in range(50):\n",
     "    x = 4*x -1\n",
     "    print (x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercícios:** (Fonte: [Chapra e Canale (2016)](https://integrada.minhabiblioteca.com.br/reader/books/9788580555691/pageid/87)) \n",
+    "\n",
+    "**1.** Converta os seguintes números na base 2 para a base 10: (a) 101101, (b) 101,101 e (c) 0,01101.\n",
+    "\n",
+    "**2.** Converta os seguintes números na base 10 para a base 2: (a) 71,263 e (b) 3,147.\n",
+    "\n",
+    "**3.** Faça seu próprio programa para determinar o épsilon da máquina do seu computador.\n",
+    "\n",
+    "**4.**\t(a) Calcule o polinômio $y = x^3-5x^2+6x+0,55$\n",
+    "em $x = 1,37$. Use aritmética com 3 algarismos significativos e truncamento. Estime o erro.\n",
+    "\n",
+    "(b) Repita (a), mas expresse $y$ como $y = ((x – 5)x + 6)x + 0,55$\n",
+    "Estime o erro e compare com a parte (a)\n",
+    "\n",
+    "**5.** Use aritmética com 5 algarismos significativos para determinar as raízes da equação \n",
+    "\n",
+    "$$x^2 – 5000,002x + 10=0$$\n",
+    "\n",
+    "com as fórmulas\n",
+    "\n",
+    "$$x=\\frac{-b \\pm \\sqrt{b^2- 4ac}} {2a}$$\n",
+    "\n",
+    "e\n",
+    "\n",
+    "$$x=\\frac{-2c}{b \\pm \\sqrt{b^2 -4ac}}.$$\n",
+    "Então, calcule os erros percentuais para o seu resultado."
    ]
   },
   {
